<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Good intentions</string>
    <string name="activity_about">About</string>
    <string name="action_play">Launch intent</string>

    <string-array name="intention_type">
        <item>Start activity</item>
        <item>Start activity for result</item>
        <item>Start service</item>
        <item>Send broadcast</item>
    </string-array>
    
    <string-array name="intention_launch_context_type">
        <item>App context</item>
        <item>Activity context</item>
    </string-array>

    <string name="intent_type">Launch type</string>

    <string name="intent_action">Action</string>

    <string name="intent_component_package_name">Package name</string>

    <string name="intent_component_class_name">Class name</string>

    <string name="intent_data_uri">Data uri</string>

    <string name="intent_mimetype">Mime type</string>

    <string name="intent_categories">Categories</string>
    
    <string name="pick_category_title">Pick a category</string>

    <string name="pick_action_title">Pick an action</string>
    
    <string name="intent_attributes">Attributes</string>
    
    <string name="intention_flags">Flags</string>
    
    <string name="pick_flag_title">Pick a flag</string>
    
    <string name="category_name_hint">Search or type</string>
    
    <string name="add_flag">Add flag</string>
    
    <string name="action_clear">Clear</string>
    
    <string name="action_about">About</string>
    

</resources>